--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header >
-        <nav class="container">
+    <header class="sticky-top">
+        <nav class="container ">
             <div class="logo">
                 Cooking<strong> MASTER</strong>
             </div>
@@ -36,7 +36,7 @@
         </div>
         <p id="no-result" class="container" style="display: none; text-align: center; font-size: 20px">Ohhho! No food item found! Search for another items.</p>
         <div id="ingredient-div" class="container">
-
+            
         </div>
         <div id="meal-div" class="container">
 
