--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="container ">
+        <nav class="container">
             <div class="logo">
                 Cooking<strong> MASTER</strong>
             </div>
@@ -29,12 +29,12 @@
                 <div class="input-group mb-3 mt-5">
                     <input id="food_item" type="text" class="form-control" placeholder="Search for meal ...">
                     <div class="input-group-append">
-                        <button id="search_button" type="button" class="btn btn-warning">Search</button>
+                        <button id="search_button" type="button" class="btn btn-success">Search</button>
                     </div>
                 </div>
             </form>
         </div>
-        <p id="no-result" class="container" style="display: none; text-align: center; font-size: 20px">Ohhho! No food item found! Search for another items.</p>
+        <p id="no-result" class="container" style="display: none; text-align: center; font-size: 25px; color: orangered ">Uppps! No food items found! Search for another items.</p>
         <div id="ingredient-div" class="container">
             
         </div>
